Project restructure Swagger support Notification support
